responsive nav bar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
                 </ul>
                 <div class="btn">
-                    <i class="fas fa-bars close-btn"></i>
+                    <i class="fas fa-bars menu-btn"></i>
                 </div>
             </nav>
         </div>
