more responsivness got  added

--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
     </section>
     <!--=================search location end================-->
 
+
+
+    <section id="about">
+        <div class="container">
+            <div class="about-content-wrapper">
+                <div class="agency-left-side">
+                    <p class="heading-normal-txt">TRAVEL AGENCY</p>
+                    <h2 class="headings">DISCOVER <span>INDIA</span> WITH OUR GUIDE</h2>
+                    <P>
+                        You can choose any desitination in INDIA with good tourism.
+                    </P>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/script.js"></script>
