--- a/index.html
+++ b/index.html
@@ -105,9 +105,38 @@
                 <div class="agency-left-side">
                     <p class="heading-normal-txt">TRAVEL AGENCY</p>
                     <h2 class="headings">DISCOVER <span>INDIA</span> WITH OUR GUIDE</h2>
-                    <P>
+                    <P class="lead">
                         You can choose any desitination in INDIA with good tourism.
                     </P>
+                    <br />
+                    <p class="lead">
+                        We give you the best experince by providing top hotels and restaurents
+                    </p>
+                    <ul>
+                        <li>
+                            <div class="icons">
+                                <i class="fa fa-check"></i>
+                                <p>20 years of experince</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icons">
+                                <i class="fa fa-check"></i>
+                                <p>100+ tourism Destinations</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icons">
+                                <i class="fa fa-phone-volume"></i>
+                                <p>+91 97000 86215</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="agency-right-side">
+                    <div class="img">
+                        <img src="images/about.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
