added count bar and grid of famous tours

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width , initial-scale=1.0" />
     <title>Travel website</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css"/>
+    <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
@@ -28,7 +28,7 @@
                     <li><a href="#">Destination</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">contact</a></li>
-    
+
                 </ul>
                 <div class="btn">
                     <i class="fas fa-bars menu-btn"></i>
@@ -40,28 +40,28 @@
 
     <main>
         <div class="side-container swiper">
-            <div class="slide-content swiper-wrapper" >
+            <div class="slide-content swiper-wrapper">
                 <div class="overlay swiper-slide">
                     <img src="./images/show-case-1.jpg" alt="">
                     <div class="img-overlay">
-                        <p>lets travel the world with us</p>
-                        <h2><span>Discover</span> The world</h2>
+                        <p>lets travel INDIA with us</p>
+                        <h2><span>Discover</span> INDIA</h2>
                         <h2>With our guide</h2>
                     </div>
                 </div>
                 <div class="overlay swiper-slide">
                     <img src="./images/show-case-2.jpg" alt="">
                     <div class="img-overlay">
-                        <p>lets travel the world with us</p>
-                        <h2><span>Discover</span> The world</h2>
+                        <p>lets travel INDIA with us</p>
+                        <h2><span>Discover</span> INDIA</h2>
                         <h2>With our guide</h2>
                     </div>
                 </div>
                 <div class="overlay swiper-slide">
                     <img src="./images/show-case-3.jpg" alt="">
                     <div class="img-overlay">
-                        <p>lets travel the world with us</p>
-                        <h2><span>Discover</span> The world</h2>
+                        <p>lets travel INDIA with us</p>
+                        <h2><span>Discover</span> INDIA</h2>
                         <h2>With our <span>Travelo</span></h2>
                     </div>
                 </div>
@@ -143,7 +143,122 @@
     </section>
 
 
+    <!--  choose your place -->
+    <section id="choose-place">
+        <div class="container">
+            <p class="heading-normal-txt">CHOOSE YOUR PLACE</p>
+            <h2 class="headings">POPULAR <span>TOURS</span></h2>
+            <div class="choose-wrapper">
+                <div class="img-left-side">
+                    <div class="lg-img">
+                        <img src="images/MUNNAR.jpg" alt="">
+                        <div class="img-content">
+                            <h2>MUNNAR tour</h2>
+                            <div class="hidden-content">
+                                <span><i class="fa fa-clock"></i>10 Days</span>
+                                <span><i class="fa fa-user"></i>12+</span>
+                                <span><i class="fa fa-location-dot"></i>MUNNAR</span>
+                            </div>
 
+                        </div>
+                        <div class="price-label">
+                            <P>starts at 5000rs</P>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-right-side">
+                    <div class="lg-img">
+                        <img src="images/MANALI.jpg" alt="">
+                        <div class="img-content">
+                            <h2>MANALI tour</h2>
+                            <div class="hidden-content">
+                                <span><i class="fa fa-clock"></i>10 Days</span>
+                                <span><i class="fa fa-user"></i>12+</span>
+                                <span><i class="fa fa-location-dot"></i>MANALI</span>
+                            </div>
+                        </div>
+                        <div class="price-label">
+                            <P>starts at 5000rs</P>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- next row  -->
+             <div class="row-wise-img">
+                <div class="lg-img">
+                    <img src="images/jaipur.jpg" alt="">
+                    <div class="img-content">
+                        <h2>JAIPUR tour</h2>
+                        <div class="hidden-content">
+                            <span><i class="fa fa-clock"></i>10 Days</span>
+                            <span><i class="fa fa-user"></i>12+</span>
+                            <span><i class="fa fa-location-dot"></i>RAJASTHAN</span>
+                        </div>
+                    </div>
+                    <div class="price-label">
+                        <P>6000rs</P>
+                    </div>
+                </div>
+                <div class="lg-img">
+                    <img src="images/char dham yatra.jpg" alt="">
+                    <div class="img-content">
+                        <h2>CHAR DHAM YATRA</h2>
+                        <div class="hidden-content">
+                            <span><i class="fa fa-clock"></i>10 Days</span>
+                            <span><i class="fa fa-user"></i>12+</span>
+                            <span><i class="fa fa-location-dot"></i>Uttarakhand</span>
+                        </div>
+                    </div>
+                    <div class="price-label">
+                        <P>6000rs</P>
+                    </div>
+                </div>
+                <div class="lg-img">
+                    <img src="images/agra.jpg" alt="">
+                    <div class="img-content">
+                        <h2>AGRA tour</h2>
+                        <div class="hidden-content">
+                            <span><i class="fa fa-clock"></i>10 Days</span>
+                            <span><i class="fa fa-user"></i>12+</span>
+                            <span><i class="fa fa-location-dot"></i>Uttar Pradesh</span>
+                        </div>
+                    </div>
+                    <div class="price-label">
+                        <P>6000rs</P>
+                    </div>
+                </div>
+             </div>
+        </div>
+    </section>
+
+
+    <!-- count bar -->
+     <section id="static-counter">
+        <div class="container">
+            <div class="static-wrapper">
+                <div class="static-icons">
+                    <i class="fa fa-plane-departure"></i>
+                    <p class="number" data-Ceil="600">600</p>
+                    <p class="txt">flight booking</p>
+                </div>
+                <div class="static-icons">
+                    <i class="fa fa-home"></i>
+                    <p class="number" data-Ceil="250">250</p>
+                    <p class="txt">Amazing booking</p>
+                </div>
+                <div class="static-icons">
+                    <i class="fa fa-ship"></i>
+                    <p class="number" data-Ceil="100">100</p>
+                    <p class="txt">Cruise Booking</p>
+                </div>
+                <div class="static-icons">
+                    <i class="fa fa-ticket"></i>
+                    <p class="number" data-Ceil="100">100</p>
+                    <p class="txt">Ticket Booking</p>
+                </div>
+            </div>
+        </div>
+     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/script.js"></script>
