added top destinations

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <!-- next row  -->
-             <div class="row-wise-img">
+            <div class="row-wise-img">
                 <div class="lg-img">
                     <img src="images/jaipur.jpg" alt="">
                     <div class="img-content">
@@ -227,13 +227,13 @@
                         <P>6000rs</P>
                     </div>
                 </div>
-             </div>
+            </div>
         </div>
     </section>
 
 
     <!-- count bar -->
-     <section id="static-counter">
+    <section id="static-counter">
         <div class="container">
             <div class="static-wrapper">
                 <div class="static-icons">
@@ -258,7 +258,83 @@
                 </div>
             </div>
         </div>
-     </section>
+    </section>
+
+
+    <!-- top-destination -->
+    <section id="top-destination">
+        <div class="container">
+            <p class="heading-normal-txt">TOP DESTINATION</p>
+            <h2 class="headings">POPULAR <span>DESTINATION</span></h2>
+            <div class="top-destination-wrapper swiper2">
+                <div class="swiper-wrapper">
+                    <div class="carousel swiper-slide">
+                        <img src="images/varanasi.jpg" alt="">
+                        <div class="carousel-img-overlay">
+                            <div class="img-content">
+                                <h2><i class="fa fa-location-dot"></i>  VARANASI</h2>
+                                <div class="hidden-content-carousel">
+                                    <span>4 Tours package</span>
+                                    <a href="#"><span>Explore</span><i class="fa fa-arrow-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="price-label">
+                            <p>15% off</p>
+                        </div>
+                    </div>
+                    <div class="carousel swiper-slide">
+                        <img src="images/kodaikanal.jpg" alt="">
+                        <div class="carousel-img-overlay">
+                            <div class="img-content">
+                                <h2><i class="fa fa-location-dot"></i>  KODAIKANAL</h2>
+                                <div class="hidden-content-carousel">
+                                    <span>4 Tours package</span>
+                                    <a href="#"><span>Explore</span><i class="fa fa-arrow-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="price-label">
+                            <p>2000rs off</p>
+                        </div>
+                    </div>
+                    <div class="carousel swiper-slide">
+                        <img src="images/goa.jpg" alt="">
+                        <div class="carousel-img-overlay">
+                            <div class="img-content">
+                                <h2><i class="fa fa-location-dot"></i> GOA</h2>
+                                <div class="hidden-content-carousel">
+                                    <span>4 Tours package</span>
+                                    <a href="#"><span>Explore</span><i class="fa fa-arrow-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="price-label">
+                            <p>NEW</p>
+                        </div>
+                    </div>
+                    <div class="carousel swiper-slide">
+                        <img src="images/kashmir.jpeg" alt="">
+                        <div class="carousel-img-overlay">
+                            <div class="img-content">
+                                <h2><i class="fa fa-location-dot"></i> KASHMIR</h2>
+                                <div class="hidden-content-carousel">
+                                    <span>4 Tours package</span>
+                                    <a href="#"><span>Explore</span><i class="fa fa-arrow-right"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="price-label">
+                            <p>NEW</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/script.js"></script>
