--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <img src="images/varanasi.jpg" alt="">
                         <div class="carousel-img-overlay">
                             <div class="img-content">
-                                <h2><i class="fa fa-location-dot"></i>  VARANASI</h2>
+                                <h2><i class="fa fa-location-dot"></i> VARANASI</h2>
                                 <div class="hidden-content-carousel">
                                     <span>4 Tours package</span>
                                     <a href="#"><span>Explore</span><i class="fa fa-arrow-right"></i> </a>
@@ -287,7 +287,7 @@
                         <img src="images/kodaikanal.jpg" alt="">
                         <div class="carousel-img-overlay">
                             <div class="img-content">
-                                <h2><i class="fa fa-location-dot"></i>  KODAIKANAL</h2>
+                                <h2><i class="fa fa-location-dot"></i> KODAIKANAL</h2>
                                 <div class="hidden-content-carousel">
                                     <span>4 Tours package</span>
                                     <a href="#"><span>Explore</span><i class="fa fa-arrow-right"></i> </a>
@@ -334,6 +334,90 @@
         </div>
     </section>
 
+
+    <!-- footer -->
+
+
+    <footer id="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="ft-content">
+                    <div class="icon">
+                        <i class="fa fa-phone-volume"></i>
+                    </div>
+                    <div class="content">
+                        <p class="lead"> call us </p>
+                        <p>+91 97000 86215</p>
+                    </div>
+                </div>
+                <div class="ft-content">
+                    <div class="icon">
+                        <i class="fa fa-envelope-open"></i>
+                    </div>
+                    <div class="content">
+                        <p class="lead"> write for us </p>
+                        <p>udbhavsai.k@gmail.com</p>
+                    </div>
+                </div>
+
+                <div class="ft-content">
+                    <div class="icon">
+                        <i class="fa fa-map-location"></i>
+                    </div>
+                    <div class="content">
+                        <p class="lead"> Adsress</p>
+                        <p>+Vijayawada , Andhra Pradesh</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div class="footer-wraper">
+                <div class="about">
+                    <div class="img-logo">
+                        <img src="images/logo.png.png" alt="">
+                    </div>
+                    <p class="lead">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci porro doloribus eveniet
+                        corrupti debitis aspernatur tempora quia similique nisi recusandae quasi fugiat, nostrum
+                        veritatis aperiam, vel, ea repellendus aliquam provident?
+                    </p>
+                    <div class="social-icons">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-pinterest"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+                <div class="links">
+                    <h2>Quick Links</h2>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Tour</a></li>
+                        <li><a href="#">Destination</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="subscribe">
+                    <h2>Subscribe</h2>
+                    <p class="">
+                        Signup for our monthly blog letter to stay informed about travel
+                    </p>
+                    <form action="#">
+                        <input type="text" placeholder="Email address">
+                        <button type="button" class="Button">Send</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="footer">
+                <p>Front-end project by K.Udbhav Sai</p>
+            </div>
+        </div>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
