--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section id="location-search">
         <div class="container">
             <div class="form-wrapper">
-                <form actiion="#">
+                <form action="#">
                     <input type="text" placeholder="where to?" class="form-control">
                     <select class="form-control">
                         <option value="Destination">Destination</option>
